[package]
name = "radiologger-cli"
version = "6.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "radiologger"
path = "src/main.rs"

[features]
default = ["direct", "remote"]
direct = []
remote = []

[dependencies]
radiologger-core = { path = "../radiologger-core" }
